--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+body {
+  background-color: rgb(231 229 228); /* stone-200 */
+  margin: 0;
+  min-height: 100vh;
+}
+
+/* stone color 테마로 사용하기 */
